test/fail/StringPickChar.java
class StringArrayInitialization{
    public static void main(String[] a){
        System.out.println("Test charAt");
    }
}

class Test{
	

    int a1(){
		String word;
		String str;
		word = str.charAt(n);
		word = str.charAt("fail");
        return 0 ;
    }
	
}
